# standalone_lattice_planner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: API.md  ARCHITECTURE.md  PERFORMANCE.md
examples/: main.cpp
examples/data/: default_config.json
include/lattice_planner/: lattice_planner.hpp
include/lattice_planner/collision/: collision_checker.hpp  footprint_collision_checker.hpp
include/lattice_planner/core/: config.hpp  constants.hpp  exceptions.hpp  logger.hpp  types.hpp
include/lattice_planner/costmap/: costmap_2d.hpp
include/lattice_planner/heuristic/: distance_heuristic.hpp  obstacle_heuristic.hpp
include/lattice_planner/io/: map_loader.hpp  path_writer.hpp
include/lattice_planner/search/: a_star.hpp  a_star_impl.hpp  analytic_expansion.hpp  analytic_expansion_impl.hpp  goal_manager.hpp  node_basic.hpp
include/lattice_planner/smoother/: smoother.hpp
include/lattice_planner/state_space/: motion_primitives.hpp  node_lattice.hpp
scripts/: generate_test_map.py
src/: lattice_planner.cpp
src/collision/: collision_checker.cpp
src/costmap/: costmap_2d.cpp
src/heuristic/: distance_heuristic.cpp  obstacle_heuristic.cpp
src/smoother/: smoother.cpp
src/state_space/: node_lattice.cpp
test/: CMakeLists.txt
